# netvirt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  INSTALL  LICENSE  README  README.md  README.win32  ROADMAP  package_win32.nsi  release.sh  snapcraft.yaml  toolchain-mingw32.cmake
dnc/: CMakeLists.txt  Makefile.am  configure.ac  dnc.conf  dnc.conf.in  postinst  postrm
dnc/debian/: changelog  control  rules
dnc/src/: CMakeLists.txt  Makefile.am  certificates.h  config.c  config.h  dnc.c  dnc.h  icon.rc  main.c  p2p.c  p2p.h  request.c  request.h  session.c  session.h
dnc/src/cli/: main.c
dnc/src/gui/: MyWindow.cpp  MyWindow.h  accountsettings.cpp  accountsettings.h  accountsettings.ui  dnc.qrc  dnc.ui  generalsettings.cpp  generalsettings.h  generalsettings.ui  logsettings.cpp  logsettings.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  systray.qrc  wizarddialog.cpp  wizarddialog.h  wizarddialog.ui
dnc/src/tests/: CMakeLists.txt
dnc/xdesktop/: dnc.desktop
dnd/: CMakeLists.txt  Makefile.am  configure.ac  dnd.conf
dnd/debian/: changelog  control  shlibs.local
dnd/src/: CMakeLists.txt  Makefile.am  certificates.h  context.c  context.h  ctable.h  dnd.c  dnd.h  dsc.c  dsc.h  ftable.c  ftable.h  inet.c  inet.h  ippool.c  ippool.h  linkst.c  linkst.h  linkstate.c  main.c  request.c  request.h  session.c  session.h
dsd/src/: CMakeLists.txt  Makefile.am  dao.c  dao.h  dsd.c  dsd.h  ippool.c  ippool.h  main.c  pki.c  pki.h  request.c  request.h
dsd/src/tests/: CMakeLists.txt  test_ippool.c
libcore/src/protocol/: AddResponse.c  AuthRequest.c  AuthRequest.h  Client.h  DNDSObjects.h  DNDSResult.c  DNMessage.c  DelResponse.c  Makefile.am  ModifyRequest.c  ModifyRequest.h  Node.c  P2pResponse.c  SearchRequest.h  Topology.c  dnds.asn1  test.c
libdnds/: CMakeLists.txt  Makefile.am  configure.ac
libdnds/config/: libdnds.pc.in
libdnds/debian/: changelog  control  rules
libdnds/src/: CMakeLists.txt  Makefile.am  aclset.c  aclset.h  bitpool.c  bitpool.h  bitv.c  bitv.h  cert.c  cert.h  chronos.c  chronos.h  cli.c  cli.h  crypto.c  crypto.h  dnds.c  dnds.h  event.c  event.h  ftable.c  ftable.h  hash.c  hash.h  hooklet.c  hooklet.h  inet.c  inet.h  ion.h  ion_epoll.c  ion_kqueue.c  ipf.c  ipf.h  ippool.c  ipset.c  ipset.h  journal.c  journal.h  jsw_hlib.c  jsw_rbtree.c  (+35 more)
libdnds/src/asn1/: Acl.c  Acl.h  AclGroup.c  AclGroup.h  AddRequest.c  AddRequest.h  AddResponse.c  AddResponse.h  AuthRequest.c  AuthRequest.h  AuthResponse.c  AuthResponse.h  Client.c  Client.h  ConnectState.c  ConnectState.h  Context.c  Context.h  ContextInfo.c  ContextInfo.h  DNDSMessage.c  DNDSMessage.h  DNDSObject.c  DNDSObject.h  DNDSResult.c  DNDSResult.h  DNMessage.c  DNMessage.h  DSMessage.c  DSMessage.h  DSObject.c  DSObject.h  DelRequest.c  DelRequest.h  DelResponse.c  DelResponse.h  Host.c  Host.h  IpPool.c  IpPool.h  (+47 more)
libdnds/src/cert-demo/: dnc_ctx1_cert.pem  dnc_ctx1_privkey.pem  dnd_cert.pem  dnd_ctx1_cert.pem  dnd_ctx1_privkey.pem  dnd_privkey.pem  dsc_cert.pem  dsc_privkey.pem  dsd_cert.pem  dsd_ctx1_cert.pem  dsd_ctx1_privkey.pem  dsd_privkey.pem
libdnds/src/protocol/: AddRequest.c  AddRequest.h  AddResponse.h  AuthRequest.c  AuthRequest.h  AuthResponse.h  CMakeLists.txt  Client.c  ConnectState.c  ConnectState.h  Context.c  Context.h  DNDSMessage.c  DNDSMessage.h  DNDSObject.c  DNDSObject.h  DNDSObjects.c  DNDSResult.h  DNMessage.h  DSMessage.c  DelRequest.c  DelRequest.h  DelResponse.c  DelResponse.h  ModifyRequest.c  ModifyRequest.h  ModifyResponse.h  NetinfoRequest.c  NetinfoRequest.h  NetinfoResponse.c  Node.c  Node.h  NodeConnectInfo.c  NodeConnectInfo.h  ObjectName.c  ObjectName.h  P2pRequest.c  P2pRequest.h  P2pResponse.c  P2pResponse.h  (+17 more)
libdnds/src/tests/: CMakeLists.txt
libnv/src/: CMakeLists.txt  bitv.c  bitv.h  err.c  err.h  inet.c  log.c  pki.c  pki.h  syslog.h  sysname.c
libnvcore/src/: CMakeLists.txt  bitv.h  cert.c  cert.h  crypto.c  crypto.h  dnds.c  dnds.h  ftable.c  ftable.h  hash.h  jsw_hlib.h  log.c  log.h  logger.c  logger.h  mbuf.c  mbuf.h  netbus.c  netbus.h  pki.c  pki.h  tcp.c  tcp.h  udt.cpp  udt.h
libnvcore/src/cert-demo/: dsc_privkey.pem  dsd_ctx1_privkey.pem  dsd_privkey.pem
libnvcore/src/db/: dump.sql
libnvcore/src/protocol/: AddRequest.c  AddRequest.h  AddResponse.c  AddResponse.h  AuthRequest.c  AuthRequest.h  AuthResponse.c  AuthResponse.h  CMakeLists.txt  Client.c  Client.h  ConnState.c  ConnState.h  ConnectState.c  ConnectState.h  Context.c  Context.h  DNDSMessage.c  DNDSMessage.h  DNDSObject.c  DNDSObject.h  DNDSObjects.c  DNDSObjects.h  DNDSResult.c  DNDSResult.h  DNMessage.c  DNMessage.h  DSMessage.c  DSMessage.h  DelRequest.c  DelRequest.h  DelResponse.c  DelResponse.h  ModifyRequest.c  ModifyRequest.h  ModifyResponse.c  ModifyResponse.h  NetinfoRequest.c  NetinfoRequest.h  NetinfoResponse.c  (+31 more)
nvagent/: CMakeLists.txt  postinst  postrm
nvagent/src/: CMakeLists.txt  agent.c  agent.h  config.c  config.h  control.c  icon.rc  ndb.c  p2p.c  p2p.h  session.c  session.h  switch.c  sysname.c  sysname.h
nvagent/src/cli/: main.c
nvagent/src/gui/: Info.plist  accountsettings.cpp  accountsettings.h  accountsettings.ui  generalsettings.cpp  generalsettings.h  generalsettings.ui  logsettings.cpp  logsettings.h  logsettings.ui  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  nvagent.qrc  wizarddialog.cpp  wizarddialog.h  wizarddialog.ui
nvagent/src/tests/: CMakeLists.txt
nvagent/xdesktop/: nvagent.desktop
nvctrler/src/: CMakeLists.txt  agent_control.c  certs.c  certs.h  controller.c  controller.h  ctrler.c  ctrler.h  ctrler2.c  ctrler2.h  dao.c  dao.h  dsd.c  ippool.c  ippool.h  main.c  pki.c  pki.h  prov.c  request.c  request.h  restapi.c  switch_control.c
nvctrler/src/tests/: CMakeLists.txt  test.sh  test_ippool.c
nvswitch/src/: CMakeLists.txt  context.c  context.h  control.c  control.h  ctable.c  ctable.h  dnd.c  dsc.h  inet.c  inet.h  linkst.c  linkst.h  main.c  request.c  request.h  session.c  session.h  switch.c  switch.h  vnetwork.c  vnetwork.h
nvswitch/src/tests/: CMakeLists.txt  test_linkst.c
(+144 files in other folders)
